--- a/SP1Framework-writeToBuffer/SP1Framework/SP1Framework.vcxproj
+++ b/SP1Framework-writeToBuffer/SP1Framework/SP1Framework.vcxproj
@@ -81,6 +81,7 @@
     <ClCompile Include="Framework\timer.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="screens.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\console.h" />
