Split into differnt CPP files

--- a/SP1Framework-writeToBuffer/SP1Framework/SP1Framework.vcxproj
+++ b/SP1Framework-writeToBuffer/SP1Framework/SP1Framework.vcxproj
@@ -77,10 +77,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Boss Fight.cpp" />
     <ClCompile Include="Framework\console.cpp" />
     <ClCompile Include="Framework\timer.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mapfunctions.cpp" />
+    <ClCompile Include="Mapdefination.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\console.h" />
