Changed and updated tutorials, split functions into cpp files, debugged

--- a/SP1Framework-writeToBuffer/SP1Framework/SP1Framework.vcxproj
+++ b/SP1Framework-writeToBuffer/SP1Framework/SP1Framework.vcxproj
@@ -79,7 +79,6 @@
   <ItemGroup>
     <ClCompile Include="ability.cpp" />
     <ClCompile Include="BossFight.cpp" />
-    <ClCompile Include="classSelect.cpp" />
     <ClCompile Include="Framework\console.cpp" />
     <ClCompile Include="Framework\timer.cpp" />
     <ClCompile Include="game.cpp" />
@@ -88,7 +87,10 @@
     <ClCompile Include="mapfunctions.cpp" />
     <ClCompile Include="Mapdefination.cpp" />
     <ClCompile Include="minimap.cpp" />
+    <ClCompile Include="MonsterFight.cpp" />
     <ClCompile Include="projectile.cpp" />
+    <ClCompile Include="Refills.cpp" />
+    <ClCompile Include="Screens.cpp" />
     <ClCompile Include="traps.cpp" />
   </ItemGroup>
   <ItemGroup>
