--- a/SP1Framework-writeToBuffer/SP1Framework/SP1Framework.vcxproj.filters
+++ b/SP1Framework-writeToBuffer/SP1Framework/SP1Framework.vcxproj.filters
@@ -1,45 +1,78 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="ability.cpp" />
-    <ClCompile Include="BossFight.cpp" />
-    <ClCompile Include="Framework\console.cpp" />
-    <ClCompile Include="Framework\timer.cpp" />
-    <ClCompile Include="game.cpp" />
-    <ClCompile Include="HUD.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="mapfunctions.cpp" />
-    <ClCompile Include="Mapdefination.cpp" />
-    <ClCompile Include="minimap.cpp" />
-    <ClCompile Include="MonsterFight.cpp" />
-    <ClCompile Include="projectile.cpp" />
-    <ClCompile Include="Refills.cpp" />
-    <ClCompile Include="Screens.cpp" />
-    <ClCompile Include="traps.cpp" />
+    <ClCompile Include="ability.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="BossFight.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="game.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="HUD.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="Mapdefinition.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="mapfunctions.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="minimap.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="MonsterFight.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="projectile.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="Refills.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="Screens.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="traps.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="Framework\timer.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="Framework\console.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\console.h">
-      <Filter>HeaderFIles\FrameWork</Filter>
+      <Filter>Header Files\Framework</Filter>
     </ClInclude>
     <ClInclude Include="Framework\timer.h">
-      <Filter>HeaderFIles\FrameWork</Filter>
+      <Filter>Header Files\Framework</Filter>
     </ClInclude>
     <ClInclude Include="Map.h">
-      <Filter>HeaderFIles</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="game.h">
-      <Filter>HeaderFIles</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="HeaderFIles">
-      <UniqueIdentifier>{f6dcf45c-887c-495b-b961-7fe0cbe00bea}</UniqueIdentifier>
+    <Filter Include="Header Files">
+      <UniqueIdentifier>{e90b587f-c53f-4908-8af1-51dd756d0e49}</UniqueIdentifier>
     </Filter>
-    <Filter Include="HeaderFIles\FrameWork">
-      <UniqueIdentifier>{1301baa5-6bab-43c6-ad7d-2a9fbfbe3bc1}</UniqueIdentifier>
+    <Filter Include="Source Files">
+      <UniqueIdentifier>{a921a697-cc31-4de0-a4d6-cbee94d14538}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{0e0e174c-30f7-4175-80ef-5a130ca23e74}</UniqueIdentifier>
+    <Filter Include="Source Files\Framework">
+      <UniqueIdentifier>{a9ad1ce9-17e3-45e7-87d4-70eb978ef6ca}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Framework">
+      <UniqueIdentifier>{7be0fda5-3cba-4cda-a5fb-c104c2ccbb04}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
