--- a/SP1Framework-writeToBuffer/SP1Framework/SP1Framework.vcxproj
+++ b/SP1Framework-writeToBuffer/SP1Framework/SP1Framework.vcxproj
@@ -85,9 +85,10 @@
     <ClCompile Include="HUD.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mapfunctions.cpp" />
-    <ClCompile Include="Mapdefinition.cpp" />
+    <ClCompile Include="Mapdefination.cpp" />
     <ClCompile Include="minimap.cpp" />
     <ClCompile Include="MonsterFight.cpp" />
+    <ClCompile Include="MovingTraps.cpp" />
     <ClCompile Include="projectile.cpp" />
     <ClCompile Include="Refills.cpp" />
     <ClCompile Include="Screens.cpp" />
