--- a/SP1Framework-writeToBuffer/SP1Framework/SP1Framework.vcxproj
+++ b/SP1Framework-writeToBuffer/SP1Framework/SP1Framework.vcxproj
@@ -86,7 +86,7 @@
     <ClCompile Include="HUD.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mapfunctions.cpp" />
-    <ClCompile Include="Mapdefination.cpp" />
+    <ClCompile Include="Mapdefinition.cpp" />
     <ClCompile Include="minimap.cpp" />
     <ClCompile Include="MonsterFight.cpp" />
     <ClCompile Include="MovingTraps.cpp" />
